--- a/i18n/zh-cn.yaml
+++ b/i18n/zh-cn.yaml
@@ -100,6 +100,9 @@
 - id: "post.categorized_in"
   translation: "发布在"
 
+- id: "post.author"
+  translation: "作者"
+
 - id: "post.tagged_in"
   translation: "标签"
 
