--- a/i18n/en-us.yaml
+++ b/i18n/en-us.yaml
@@ -100,6 +100,9 @@
 - id: "post.categorized_in"
   translation: "in"
 
+- id: "post.author"
+  translation: "Author"
+
 - id: "post.tagged_in"
   translation: "TAGGED IN"
 
